Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I7db8155cb74847cc3a16d49793c7018b2d3c6e77

Former-commit-id: 6577aa89b6b65a8d8f4aa1039f2d40396cece95d

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -158,7 +158,7 @@
     <string name="bluetooth_disable_hw_offload_dialog_confirm" msgid="5594859658551707592">"إعادة التشغيل"</string>
     <string name="bluetooth_disable_hw_offload_dialog_cancel" msgid="3663690305043973720">"إلغاء"</string>
     <string name="bluetooth_enable_leaudio" msgid="1245004820628723136">"‏تفعيل ميزة Bluetooth LE audio"</string>
-    <string name="bluetooth_enable_leaudio_summary" msgid="8066117764037123479">"‏تفعيل ميزة Bluetooth LE audio في حال دعم الجهاز لإمكانات جهاز الصوت المنخفض الطاقة."</string>
+    <string name="bluetooth_enable_leaudio_summary" msgid="8066117764037123479">"‏تفعيل ميزة Bluetooth LE audio في حال إتاحة الجهاز لإمكانات جهاز الصوت المنخفض الطاقة."</string>
     <string name="connected_device_media_device_title" msgid="3783388247594566734">"أجهزة الوسائط"</string>
     <string name="connected_device_call_device_title" msgid="88732390601723608">"أجهزة الاتصال"</string>
     <string name="connected_device_other_device_title" msgid="4652120430615729193">"أجهزة أخرى"</string>
@@ -3520,7 +3520,7 @@
     <string name="user_credential_title" msgid="4686178602575567298">"تفاصيل بيانات الاعتماد"</string>
     <string name="user_credential_removed" msgid="4087675887725394743">"تمت إزالة بيانات الاعتماد: <xliff:g id="CREDENTIAL_NAME">%s</xliff:g>"</string>
     <string name="user_credential_none_installed" msgid="918620912366836994">"لم يتم تثبيت بيانات اعتماد المستخدم."</string>
-    <string name="spellcheckers_settings_title" msgid="2799021700580591443">"تدقيق إملائي"</string>
+    <string name="spellcheckers_settings_title" msgid="2799021700580591443">"المدقق الإملائي"</string>
     <string name="spellcheckers_settings_for_work_title" msgid="6471603934176062893">"المدقق الإملائي للعمل"</string>
     <string name="current_backup_pw_prompt" msgid="4962276598546381140">"اكتب كلمة المرور الحالية للنسخة الاحتياطية الكاملة هنا"</string>
     <string name="new_backup_pw_prompt" msgid="4884439230209419503">"اكتب كلمة مرور جديدة للنسخ الاحتياطية الكاملة هنا"</string>
@@ -4668,7 +4668,7 @@
       <item quantity="one">تطبيق واحد (<xliff:g id="COUNT_0">%d</xliff:g>) غير مستخدم</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"إعدادات التطبيقات غير المُستخدَمة"</string>
-    <string name="unused_apps_switch" msgid="7595419855882245772">"إيقاف نشاط تطبيق مؤقتًا عند عدم استخدامه"</string>
+    <string name="unused_apps_switch" msgid="7595419855882245772">"إيقاف نشاط التطبيق مؤقتًا عند عدم استخدامه"</string>
     <string name="unused_apps_switch_summary" msgid="2171098908014596802">"إزالة الأذونات وحذف الملفات المؤقتة وإيقاف الإشعارات"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"جميع التطبيقات"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"التطبيقات المثبَّتة"</string>
@@ -5181,7 +5181,7 @@
     <string name="dark_theme_slice_title" msgid="4684222119481114062">"تجربة \"المظهر الداكن\""</string>
     <string name="dark_theme_slice_subtitle" msgid="5555724345330434268">"المساعدة في زيادة عمر البطارية"</string>
     <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"فئات مطوّري البرامج في الإعدادات السريعة"</string>
-    <string name="adb_authorization_timeout_title" msgid="6996844506783749754">"‏إيقاف مهلة تفويض أداة adb"</string>
+    <string name="adb_authorization_timeout_title" msgid="6996844506783749754">"‏إيقاف مهلة تفويض أداة Adb"</string>
     <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"‏إيقاف الإبطال التلقائي لتفويضات أداة Adb الممنوحة للأنظمة التي لم تُعد الاتصال خلال الفترة التلقائية (7 أيام) أو الفترة التي يضبطها المستخدم (الحد الأدنى يوم واحد)"</string>
     <string name="winscope_trace_quick_settings_title" msgid="4104768565053226689">"‏تتبّع أنشطة Winscope"</string>
     <string name="sensors_off_quick_settings_title" msgid="8472151847125917167">"إيقاف أجهزة الاستشعار"</string>
@@ -5505,7 +5505,7 @@
     <string name="enable_gnss_raw_meas_full_tracking_summary" msgid="3841463141138247167">"‏تتبّع جميع مجموعات وفترات تكرار GNSS التي لا تحتوي على دورات عمل"</string>
     <string name="input_method_category" msgid="2252659253631639005">"أسلوب الإدخال"</string>
     <string name="stylus_handwriting" msgid="2154591374132794563">"الكتابة بخط اليد بقلم الشاشة"</string>
-    <string name="stylus_handwriting_summary" msgid="6333425895172696950">"‏عندما يكون مفتاح التبديل مفعّلاً، يتلقّى أسلوب الإدخال MotionEvent لقلم الشاشة في حال التركيز على المحرِّر."</string>
+    <string name="stylus_handwriting_summary" msgid="6333425895172696950">"‏عندما يكون مفتاح التبديل مفعّلاً، يتلقّى أسلوب الإدخال الحالي حدث MotionEvent لقلم الشاشة في حال التركيز على محرِّر."</string>
     <string name="device_theme" msgid="5027604586494772471">"مظهر الجهاز"</string>
     <string name="default_theme" msgid="4815428567082263639">"تلقائي"</string>
     <string name="show_operator_name_title" msgid="3355910331531144028">"اسم الشبكة"</string>
@@ -5899,8 +5899,8 @@
     <string name="power_menu_long_press_for_assist_summary" msgid="8251928804984560312">"‏تشغيل \"مساعد Google\" عن طريق الضغط مع الاستمرار على زر التشغيل"</string>
     <string name="power_menu_power_volume_up_hint" msgid="1733051433583045623">"قائمة زر التشغيل وحالات الطوارئ:\nاضغط على زرَّي التشغيل ورفع الصوت في آنٍ واحد."</string>
     <string name="power_menu_power_prevent_ringing_hint" msgid="5786494894009727654">"منع الرنين:\nالاختصار متاح في قائمة مفتاح مستوى الصوت."</string>
-    <string name="power_menu_long_press_for_assist_sensitivity_title" msgid="1626808509158422185">"مدة الضغط والضغط مع الاستمرار"</string>
-    <string name="power_menu_long_press_for_assist_sensitivity_summary" msgid="7550610071666801935">"يمكنك تعديل حساسية الضغطة من خلال اختيار مدة الضغط والضغط مع الاستمرار على زر التشغيل."</string>
+    <string name="power_menu_long_press_for_assist_sensitivity_title" msgid="1626808509158422185">"مدة الضغط مع الاستمرار"</string>
+    <string name="power_menu_long_press_for_assist_sensitivity_summary" msgid="7550610071666801935">"يمكنك تعديل حساسية الضغطة من خلال اختيار مدة الضغط مع الاستمرار على زر التشغيل."</string>
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"ضغطة قصيرة"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"ضغطة طويلة"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"إظهار المحفظة"</string>
