--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -1562,7 +1562,7 @@
     <string name="status_signal_strength" msgid="7644525712554444359">"Signalstyrke"</string>
     <string name="status_roaming" msgid="1253597174715663778">"Roaming"</string>
     <string name="status_operator" msgid="4335640583552058491">"Nettverk"</string>
-    <string name="status_wifi_mac_address" msgid="4447611754614388914">"MAC-adresse for Wi-Fi"</string>
+    <string name="status_wifi_mac_address" msgid="4447611754614388914">"MAC-adresse for wifi"</string>
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Enhetens Wi-Fi-MAC-adresse"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Bluetooth-adresse"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Serienummer"</string>
