--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -154,7 +154,7 @@
     <string name="bluetooth_disable_hw_offload_dialog_confirm" msgid="5594859658551707592">"Reiniciar"</string>
     <string name="bluetooth_disable_hw_offload_dialog_cancel" msgid="3663690305043973720">"Cancelar"</string>
     <string name="bluetooth_enable_leaudio" msgid="1245004820628723136">"Activar audio Bluetooth de baixo consumo"</string>
-    <string name="bluetooth_enable_leaudio_summary" msgid="8066117764037123479">"Activa a función de audio por Bluetooth de baixo consumo se o dispositivo é compatible coas funcións do hardware de audio de baixo consumo."</string>
+    <string name="bluetooth_enable_leaudio_summary" msgid="8066117764037123479">"Activa a función de audio por Bluetooth de baixo consumo se o dispositivo é compatible coas funcións do hardware de audio de baixo consumo"</string>
     <string name="connected_device_media_device_title" msgid="3783388247594566734">"Dispositivos multimedia"</string>
     <string name="connected_device_call_device_title" msgid="88732390601723608">"Dispositivos de chamada"</string>
     <string name="connected_device_other_device_title" msgid="4652120430615729193">"Outros dispositivos"</string>
@@ -224,7 +224,7 @@
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Idiomas suxeridos"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Todos os idiomas"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Idioma do sistema"</string>
-    <string name="preference_of_system_locale_summary" msgid="5612241394431188535">"Opción predeterminada do sistema"</string>
+    <string name="preference_of_system_locale_summary" msgid="5612241394431188535">"Aplicación predeterminada do sistema"</string>
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"A opción de seleccionar un idioma para esta aplicación non está dispoñible en Configuración."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"É posible que o idioma non estea dispoñible na aplicación. Pode que algunhas aplicacións non sexan compatibles con esta opción de configuración."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Aquí só se mostran as aplicacións que admiten a selección de idioma."</string>
@@ -1371,7 +1371,7 @@
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"Forzar taxa de actualización máxima"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"A taxa de actualización máis alta para mellorar a resposta táctil e a calidade das animacións. Aumenta o uso da batería."</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"Atención á pantalla"</string>
-    <string name="adaptive_sleep_summary_on" msgid="313187971631243800">"Activado/A pantalla non se apagará se miras para ela"</string>
+    <string name="adaptive_sleep_summary_on" msgid="313187971631243800">"Activado / A pantalla non se apagará se miras para ela"</string>
     <string name="adaptive_sleep_summary_off" msgid="5272156339202897523">"Opción desactivada"</string>
     <string name="adaptive_sleep_title_no_permission" msgid="1719759921214237016">"Necesítase acceso á cámara"</string>
     <string name="adaptive_sleep_summary_no_permission" msgid="5822591289468803691">"Para utilizar a función Atención á pantalla, cómpre permitir o acceso á cámara. Toca para xestionar os permisos dos Servizos de personalización do dispositivo"</string>
@@ -2702,7 +2702,7 @@
     <string name="background_activity_disabled_dialog_text" msgid="4053170297325882494">"Non podes limitar a aplicación porque non se configurou para optimizar a batería.\n\nPrimeiro activa a optimización da batería."</string>
     <string name="manager_battery_usage_unrestricted_title" msgid="2426486290463258032">"Sen restricións"</string>
     <string name="manager_battery_usage_optimized_title" msgid="8080765739761921817">"Optimizado"</string>
-    <string name="manager_battery_usage_restricted_title" msgid="7702863764130323118">"Restrinxida"</string>
+    <string name="manager_battery_usage_restricted_title" msgid="7702863764130323118">"Restrinxido"</string>
     <string name="manager_battery_usage_unrestricted_summary" msgid="6819279865465667692">"Permite usar a batería sen restricións cando a aplicación está en segundo plano. Pode que se consuma máis batería."</string>
     <string name="manager_battery_usage_optimized_summary" msgid="1332545476428039900">"Optimiza a duración da batería en función do uso que fas dela. É a opción recomendada para a maioría das aplicacións."</string>
     <string name="manager_battery_usage_restricted_summary" msgid="8324695640704416905">"Restrinxe o uso da batería cando a aplicación está en segundo plano. Pode que a aplicación non funcione segundo o previsto. É posible que as notificacións cheguen con atraso."</string>
@@ -2932,7 +2932,7 @@
     <string name="battery_total_usage_and_bg_less_minute_usage_24hr" msgid="1721830675789709748">"<xliff:g id="TIME">^1</xliff:g> en total • menos dun minuto en segundo plano\nnas últimas 24 horas"</string>
     <string name="battery_total_usage_and_bg_less_minute_usage_with_period" msgid="5943281928474598517">"<xliff:g id="TIME_0">^1</xliff:g> en total • menos dun minuto en segundo plano\nentre <xliff:g id="TIME_PERIOD">^2</xliff:g>"</string>
     <string name="battery_not_usage" msgid="1472275761547230196">"Sen uso da batería desde a última carga completa"</string>
-    <string name="battery_not_usage_24hr" msgid="8397519536160741248">"Sen uso da batería nas últimas 24 horas"</string>
+    <string name="battery_not_usage_24hr" msgid="8397519536160741248">"Sen uso nas últimas 24 horas"</string>
     <string name="battery_usage_without_time" msgid="1346894834339420538"></string>
     <string name="advanced_battery_graph_subtext" msgid="6816737986172678550">"A estimación do nivel de batería baséase no uso do dispositivo"</string>
     <string name="estimated_time_left" msgid="948717045180211777">"Tempo restante estimado"</string>
@@ -3810,13 +3810,13 @@
     <string name="zen_mode_settings_dnd_custom_settings_footer_link" msgid="8255159194653341835">" "<annotation id="link">"Ver configuración personalizada"</annotation></string>
     <string name="zen_interruption_level_priority" msgid="4854123502362861192">"Só prioridade"</string>
     <string name="zen_mode_and_condition" msgid="8580896862841920031">"<xliff:g id="ZEN_MODE">%1$s</xliff:g>. <xliff:g id="EXIT_CONDITION">%2$s</xliff:g>"</string>
-    <string name="zen_mode_sound_summary_on_with_info" msgid="4803606180235742003">"Activado/<xliff:g id="ID_1">%1$s</xliff:g>"</string>
+    <string name="zen_mode_sound_summary_on_with_info" msgid="4803606180235742003">"Activado / <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="zen_mode_sound_summary_on" msgid="9077659040104989899">"Activado"</string>
     <string name="zen_mode_duration_summary_always_prompt" msgid="7658172853423383037">"Pregunta sempre"</string>
     <string name="zen_mode_duration_summary_forever" msgid="5551992961329998606">"Ata que o desactives"</string>
     <string name="zen_mode_duration_summary_time_hours" msgid="2602655749780428308">"{count,plural, =1{1 hora}other{# horas}}"</string>
     <string name="zen_mode_duration_summary_time_minutes" msgid="5755536844016835693">"{count,plural, =1{1 minuto}other{# minutos}}"</string>
-    <string name="zen_mode_sound_summary_off" msgid="7350437977839985836">"{count,plural, =0{Desactivado}=1{Desactivado/1 planificación pode activarse automaticamente}other{Desactivado/# planificacións poden activarse automaticamente}}"</string>
+    <string name="zen_mode_sound_summary_off" msgid="7350437977839985836">"{count,plural, =0{Desactivado}=1{Desactivado / 1 planificación pode activarse automaticamente}other{Desactivado / # planificacións poden activarse automaticamente}}"</string>
     <string name="zen_category_behavior" msgid="3214056473947178507">"Que pode interromper o modo Non molestar?"</string>
     <string name="zen_category_people" msgid="8252926021894933047">"Persoas"</string>
     <string name="zen_category_apps" msgid="1167374545618451925">"Aplicacións"</string>
@@ -3900,7 +3900,7 @@
     <string name="bubbles_feature_disabled_dialog_text" msgid="5275666953364031055">"Se activas as burbullas para esta aplicación, tamén se activarán no dispositivo.\n\nIsto afecta a outras aplicacións ou conversas con permiso para mostrarse como burbullas."</string>
     <string name="bubbles_feature_disabled_button_approve" msgid="2042628067101419871">"Activar"</string>
     <string name="bubbles_feature_disabled_button_cancel" msgid="8963409459448350600">"Cancelar"</string>
-    <string name="notifications_bubble_setting_on_summary" msgid="4641572377430901196">"Activado/As conversas poden aparecer como iconas flotantes"</string>
+    <string name="notifications_bubble_setting_on_summary" msgid="4641572377430901196">"Activado / As conversas poden aparecer como iconas flotantes"</string>
     <string name="notifications_bubble_setting_title" msgid="8287649393774855268">"Permitir que as aplicacións mostren burbullas"</string>
     <string name="notifications_bubble_setting_description" msgid="7336770088735025981">"Algunhas conversas aparecerán como iconas flotantes enriba doutras aplicacións"</string>
     <string name="bubble_app_setting_all" msgid="312524752846978277">"Todas as conversas poden mostrarse como burbullas"</string>
@@ -4172,7 +4172,7 @@
     <string name="zen_mode_event_rule_reply_yes_or_maybe" msgid="6584448788100186574">"Si ou Quizais"</string>
     <string name="zen_mode_event_rule_reply_yes" msgid="7812120982734551236">"Si"</string>
     <string name="zen_mode_rule_not_found_text" msgid="5303667326973891036">"Non se atopou a norma."</string>
-    <string name="zen_mode_rule_summary_enabled_combination" msgid="1183604368083885789">"Activado/<xliff:g id="MODE">%1$s</xliff:g>"</string>
+    <string name="zen_mode_rule_summary_enabled_combination" msgid="1183604368083885789">"Activado / <xliff:g id="MODE">%1$s</xliff:g>"</string>
     <string name="zen_mode_rule_summary_provider_combination" msgid="785343032708491365">"<xliff:g id="PACKAGE">%1$s</xliff:g>\n<xliff:g id="SUMMARY">%2$s</xliff:g>"</string>
     <string name="zen_mode_schedule_rule_days" msgid="8633770815307716351">"Días"</string>
     <string name="zen_mode_schedule_rule_days_none" msgid="5636604196262227070">"Ningún"</string>
@@ -4475,7 +4475,7 @@
     <string name="default_phone_title" msgid="7616730756650803827">"Aplicación de teléfono"</string>
     <string name="default_app" msgid="445053777504688596">"(Predeterminada)"</string>
     <string name="system_app" msgid="1863291702508355041">"(Sistema)"</string>
-    <string name="system_default_app" msgid="2647834628622214931">"(Opción predeterminada do sistema)"</string>
+    <string name="system_default_app" msgid="2647834628622214931">"(Aplicación predeterminada do sistema)"</string>
     <string name="apps_storage" msgid="643866814746927111">"Almacenamento de aplicacións"</string>
     <string name="usage_access" msgid="5487993885373893282">"Acceso a datos de uso"</string>
     <string name="permit_usage_access" msgid="179630895262172674">"Permitir acceso aos datos de uso"</string>
@@ -5169,7 +5169,7 @@
     <string name="enable_gnss_raw_meas_full_tracking_summary" msgid="3841463141138247167">"Realiza un seguimento de todas as frecuencias e constelacións de satélites de GNSS sen ciclos"</string>
     <string name="input_method_category" msgid="2252659253631639005">"Método de introdución de texto"</string>
     <string name="stylus_handwriting" msgid="2154591374132794563">"Escritura manual con lapis óptico"</string>
-    <string name="stylus_handwriting_summary" msgid="6333425895172696950">"Se activas a opción, o método de introdución seleccionado recibe o elemento MotionEvent do lapis óptico se o editor está enfocado."</string>
+    <string name="stylus_handwriting_summary" msgid="6333425895172696950">"Activando a opción, o método de introdución seleccionado recibe o elemento MotionEvent do lapis óptico se o editor está enfocado"</string>
     <string name="device_theme" msgid="5027604586494772471">"Tema do dispositivo"</string>
     <string name="default_theme" msgid="4815428567082263639">"Predeterminado"</string>
     <string name="show_operator_name_title" msgid="3355910331531144028">"Nome da rede"</string>
@@ -5347,8 +5347,8 @@
     <string name="mobile_network_in_range" msgid="3528320750936028369">"Dentro da zona de cobertura"</string>
     <string name="mobile_network_not_in_range" msgid="5680896182395366584">"Non está dentro da zona de cobertura"</string>
     <string name="mobile_network_list_add_more" msgid="4478586073355236604">"Engadir máis"</string>
-    <string name="mobile_network_active_sim" msgid="6397581267971410039">"Activado/SIM"</string>
-    <string name="mobile_network_inactive_sim" msgid="5829757490580409899">"Desactivado/SIM"</string>
+    <string name="mobile_network_active_sim" msgid="6397581267971410039">"Activado / SIM"</string>
+    <string name="mobile_network_inactive_sim" msgid="5829757490580409899">"Desactivado / SIM"</string>
     <string name="mobile_network_active_esim" msgid="4673190244386572318">"Activa/SIM descargada"</string>
     <string name="mobile_network_inactive_esim" msgid="2901035056727849007">"Inactiva/SIM descargada"</string>
     <string name="mobile_network_sim_name" msgid="3187192894150386537">"Cor e nome da SIM"</string>
