--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -4082,7 +4082,7 @@
     <string name="notification_importance_default_title" msgid="8875198696330289686">"גבוהה"</string>
     <string name="notification_importance_high_title" msgid="394129291760607808">"הופעה במסך"</string>
     <string name="notification_block_title" msgid="7392909527700971673">"חסימה"</string>
-    <string name="notification_silence_title" msgid="4085829874452944989">"שקט"</string>
+    <string name="notification_silence_title" msgid="4085829874452944989">"שקטה"</string>
     <string name="notification_alert_title" msgid="1632401211722199217">"ברירת מחדל"</string>
     <string name="allow_interruption" msgid="5237201780159482716">"סוגי הפרעות שאפשר להפעיל"</string>
     <string name="allow_interruption_summary" msgid="9044131663518112543">"האפליקציה יכולה להפעיל צלילים ורטט ו/או להציג התראות קופצות במסך"</string>
